src/objects/VFStudent__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Applying_For__c</fullName>
        <label>Course Applying For</label>
        <picklist>
            <picklistValues>
                <fullName>B.E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.Arch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.C.A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.C.A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>H_S_C_Percentage__c</fullName>
        <label>H.S.C Percentage</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_S_C_Percentage__c</fullName>
        <label>S.S.C Percentage</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>VFStudent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>VFStudent Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VFStudents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Roll_Number_should_not_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>Roll_Number__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Roll_Number__c</errorDisplayField>
        <errorMessage>Roll Number is invalid. Enter valid Roll number.</errorMessage>
    </validationRules>
</CustomObject>